# Akinator

./: Akinator.cpp  Akinator.h  CMakeLists.txt  DataBase.txt  Error.h  Main.cpp  Makefile  Stack.cpp  Stack.h  Types.h  list.dot  logfile.cpp
include/: FunnyColours.h  Stack.h  Types.h
src/: Akinator.c  Error.c  Main.c  Stack.c
